# portal

./: .gitignore  CLIPBOARD_BASE64_UPDATE.md  FIXES_SUMMARY.md  FOLDER_STRUCTURE.txt  LINUX_KEYBOARD_FIX.md  MIGRATION_COMPLETE.md  MIGRATION_PLAN.md  Portal-v1.0.spec  README.md  README_NEW_STRUCTURE.md  SETUP_INSTRUCTIONS.md  STRUCTURE.md  audio.py  build.bat  build.sh  config.json  config.py  et --hard ecdfbc2  log_viewer.py  main.py  portal.py  requirements.txt  share.py  temp.txt
audio-prototype/client/: audio_client.cpp  client.py  client_linux.py  client_windows.py
c version that might work/audio-prototype/: CMakeLists.txt
c version that might work/audio-prototype/client/: client_linux.cpp  client_windows.cpp
c version that might work/audio-prototype/server/: server_linux.cpp  server_windows.cpp
controllers/: audio_controller.py  clipboard_controller.py  keyboard_controller.py  mouse_controller.py
failed stuff here/: mouse.py
gui/: log_viewer.py  main_window.py
mousekey2/: main_.py  main_final_cleaned.py  main_fixed.py  main_fixed_complete.py
network/: __init__.py  audio_manager.py  connection_handler.py  input_handler.py  share_manager.py
new try/: client_linux.py  client_windows.py  new.cpp  portal_ui.py  server.py
new try/idk/: client.py  (+8 more)
something yeh/: audio.py  receiver.py  sender_linux.py  sender_windows.py
utils/: config.py
z final file/: .gitignore  audio.py  audio_test.py  client.py  config.json  config.py  invis.py  local_config.json  log_viewer.py  main.py  mouse_input.py  portal_ui.py  server.py  share.py  shared_config.json
(+85 files in other folders)
